@@ -3,7 +3,8 @@ Revision history for Tesla-API
 0.10 UNREL
     - Remove erroneous call example from Tesla::Vehicle from the SYNOPSIS
     - Added prereq of LWP::Protocol::https
-    
+    - Remove WWW::Mechanize timeout (it defaults to 180 secs in LWP::UserAgent)
+
 0.09    2022-03-22
     - In CI script, manually install File::ShareDir::Install, as it doesn't get
       installed by default the way we configure the test run (was throwing "! No
